# ESP32_SmartHome

./: .gitignore
master_device/main/: CMakeLists.txt  master_device.c  master_device.h  server.html
master_device/main/components/: components.c  components.h
master_device/main/components/data/: data.c  data.h
master_device/main/components/nvs/: nvs.c  nvs.h
master_device/main/components/wifi/: wifi.c  wifi.h
master_device/main/include/: button.h  components.h  constants.h  data.h  led.h  main.h  ntp.h  nvs.h  task.h  wifi.h
master_device/main/nvs/: nvs.c  nvs.h
master_device/main/partitions/: partition_table.csv  partitions.c  partitions.h  serial.csv
master_device/main/src/: button.c  components.c  data.c  led.c  main.c  master_device.c  ntp.c  nvs.c  task.c  wifi.c
master_device/main/tasks/: task.c  task.h
master_device/main/tasks/data/: data.c
master_device/main/tasks/wifi/: wifi.c  wifi.h
sensor_device/main/: CMakeLists.txt  device.c  device.h
sensor_device/main/drivers/i2c/: \  i2c.c  i2c.h
sensor_device/main/drivers/light_sensor/: calculate_lux.c  light_sensor.c  light_sensor.h
sensor_device/main/drivers/temp_hum_sensor/: temp_hum_sensor.c
sensor_device/main/i2c/: i2c.c  i2c.h
sensor_device/main/i2c/light_sensor/: calculate_lux.c  calculate_lux.c.txt  light_sensor.c  light_sensor.h
sensor_device/main/i2c/pressure_sensor/: pressure_sensor.c  pressure_sensor.h
sensor_device/main/i2c/temp_hum_sensor/: temp_hum_sensor.h
sensor_device/main/nvs/: nvs.c  nvs.h
sensor_device/main/tasks/: tasks.c  tasks.h
sensor_device/main/tasks/data/: data.c  data.h
sensor_device/main/tasks/wifi/: wifi.c  wifi.h
(+54 files in other folders)
